--- a/Bender.yml
+++ b/Bender.yml
@@ -35,29 +35,31 @@ dependencies:
 
 sources:
   # Files from deprecated axi_node IP. Remove them after switching to new AXI ips in cluster
+  # axi_node
   - include_dirs:
       - deps_deprecated/axi_node/src
-  - deps_deprecated/axi_node/src/apb_regs_top.sv
-  - deps_deprecated/axi_node/src/axi_address_decoder_AR.sv
-  - deps_deprecated/axi_node/src/axi_address_decoder_AW.sv
-  - deps_deprecated/axi_node/src/axi_address_decoder_BR.sv
-  - deps_deprecated/axi_node/src/axi_address_decoder_BW.sv
-  - deps_deprecated/axi_node/src/axi_address_decoder_DW.sv
-  - deps_deprecated/axi_node/src/axi_AR_allocator.sv
-  - deps_deprecated/axi_node/src/axi_ArbitrationTree.sv
-  - deps_deprecated/axi_node/src/axi_AW_allocator.sv
-  - deps_deprecated/axi_node/src/axi_BR_allocator.sv
-  - deps_deprecated/axi_node/src/axi_BW_allocator.sv
-  - deps_deprecated/axi_node/src/axi_DW_allocator.sv
-  - deps_deprecated/axi_node/src/axi_FanInPrimitive_Req.sv
-  - deps_deprecated/axi_node/src/axi_multiplexer.sv
-  - deps_deprecated/axi_node/src/axi_node.sv
-  - deps_deprecated/axi_node/src/axi_node_intf_wrap.sv
-  - deps_deprecated/axi_node/src/axi_node_wrap_with_slices.sv
-  - deps_deprecated/axi_node/src/axi_regs_top.sv
-  - deps_deprecated/axi_node/src/axi_request_block.sv
-  - deps_deprecated/axi_node/src/axi_response_block.sv
-  - deps_deprecated/axi_node/src/axi_RR_Flag_Req.sv
+    files:
+      - deps_deprecated/axi_node/src/apb_regs_top.sv
+      - deps_deprecated/axi_node/src/axi_address_decoder_AR.sv
+      - deps_deprecated/axi_node/src/axi_address_decoder_AW.sv
+      - deps_deprecated/axi_node/src/axi_address_decoder_BR.sv
+      - deps_deprecated/axi_node/src/axi_address_decoder_BW.sv
+      - deps_deprecated/axi_node/src/axi_address_decoder_DW.sv
+      - deps_deprecated/axi_node/src/axi_AR_allocator.sv
+      - deps_deprecated/axi_node/src/axi_ArbitrationTree.sv
+      - deps_deprecated/axi_node/src/axi_AW_allocator.sv
+      - deps_deprecated/axi_node/src/axi_BR_allocator.sv
+      - deps_deprecated/axi_node/src/axi_BW_allocator.sv
+      - deps_deprecated/axi_node/src/axi_DW_allocator.sv
+      - deps_deprecated/axi_node/src/axi_FanInPrimitive_Req.sv
+      - deps_deprecated/axi_node/src/axi_multiplexer.sv
+      - deps_deprecated/axi_node/src/axi_node.sv
+      - deps_deprecated/axi_node/src/axi_node_intf_wrap.sv
+      - deps_deprecated/axi_node/src/axi_node_wrap_with_slices.sv
+      - deps_deprecated/axi_node/src/axi_regs_top.sv
+      - deps_deprecated/axi_node/src/axi_request_block.sv
+      - deps_deprecated/axi_node/src/axi_response_block.sv
+      - deps_deprecated/axi_node/src/axi_RR_Flag_Req.sv
   
     # Source files grouped in levels. Files in level 0 have no dependencies on files in this
     # package. Files in level 1 only depend on files in level 0, files in level 2 on files in
