ips/cv32e40p: Fix core logic to support decoupled FP units
* Mark FP operations in the core with a label
* Mark operations performed in different units with a different label
* For ControlPULP: +/-/*/CAST/MAC are type 0, DIV/SQRT are type 1 (decoupled unit)
* The hardware demultiplexes to the correct unit according to the type

--- a/src_files.yml
+++ b/src_files.yml
@@ -4,6 +4,7 @@ pulp_cluster:
     -L axi_lib,
     -L cluster_interconnect_lib,
     -L common_cells_lib,
+    -L cv32e40p_lib
   ]
   incdirs: [
     ../../rtl/includes,
