treewide: Wrap ControlPULP memories for Sipearl integration
* Wrap L2 interleaved/private single macro
* Wrap L1 single macro
* Wrap L1 data cache single macro
* Wrap L1 tag cache single macro
* Add Xilinx BRAMs for data/tag cache fields

Each wrapper considers one macro. According to the memory,
each macro is generated multiple times according to the
number of banks.

--- a/src_files.yml
+++ b/src_files.yml
@@ -19,6 +19,7 @@ pulp_cluster:
     rtl/core_region.sv,
     rtl/core_demux.sv,
     rtl/cluster_interconnect_wrap.sv,
+    rtl/tcdm_bank.sv,
     rtl/tcdm_banks_wrap.sv,
     rtl/periph_demux.sv,
     rtl/per_demux_wrap.sv,
