treewide: Enable switch between idma and mchan
* Use a parameter to handle this
* Enable idma by default
* Rename `dmac_wrap` modules to avoid naming conflicts

--- a/src_files.yml
+++ b/src_files.yml
@@ -29,7 +29,7 @@ pulp_cluster:
     rtl/cluster_clock_gate.sv,
     rtl/cluster_timer_wrap.sv,
     rtl/cluster_event_map.sv,
-    #rtl/dmac_wrap.sv,
+    rtl/dmac_wrap_mchan.sv,
     rtl/cluster_bus_wrap.sv,
     rtl/axi2mem_wrap.sv,
     rtl/axi2per_wrap.sv,
