--- a/Bender.yml
+++ b/Bender.yml
@@ -31,6 +31,7 @@ dependencies:
   hci:                    { git: "https://github.com/pulp-platform/hci.git", version: 1.0.8 }
   idma:                   { git: "https://github.com/pulp-platform/idma.git", version: 0.3.1 }
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.3.1 }
+  redundancy_cells: { path: "/home/michaero/git/redundancy_cells/" } # TMP local path for development
 
 sources:
     # Source files grouped in levels. Files in level 0 have no dependencies on files in this
