Separated Core Region from Core/Periph Demultiplexers and HW Synchronizer. Created new Core Assist module (based on the Space PULP approach) and arranged multiple externa performance counters connection to the Core.

--- a/Bender.yml
+++ b/Bender.yml
@@ -59,6 +59,7 @@ sources:
   - rtl/cluster_interconnect_wrap.sv
   - rtl/cluster_peripherals.sv
   - rtl/core_demux.sv
+  - rtl/core_assist.sv
     # Level 2
   - target: rtl
     defines:
