--- a/Bender.yml
+++ b/Bender.yml
@@ -8,7 +8,7 @@ package:
     - "Michael Rogenmoser <michaero@student.ethz.ch>"
 
 dependencies:
-  axi2mem:                { git: "https://github.com/pulp-platform/axi2mem.git"               , rev: "6973e0434d26ba578cdb4aa69c26c1facd1a3f15" } # deprecated, replace with axi_to_mem in axi repo
+  axi2mem:                { git: "https://github.com/pulp-platform/axi2mem.git"               , rev: "6973e0434d26ba578cdb4aa69c26c1facd1a3f15" }
   axi2per:                { git: "https://github.com/pulp-platform/axi2per.git"               , version: 1.0.1                                  }
   per2axi:                { git: "https://github.com/pulp-platform/per2axi.git"               , version: 1.0.4                                  }
   cluster_interconnect:   { git: "https://github.com/pulp-platform/cluster_interconnect.git"  , version: 1.1.1                                  }
