--- a/Bender.yml
+++ b/Bender.yml
@@ -21,13 +21,13 @@ dependencies:
   idma:                   { git: "https://github.com/pulp-platform/iDMA.git", rev: 437ffa9dac5dea0daccfd3e8ae604d4f6ae2cdf1 } # branch: master
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: "a7e3f4e4c7fe607bcd6b9d94db77f612fd6ef6be" } # branch: yt/carfield
   cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", version: 2.1.0 }
-  fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "2c11ff8176a8b176f2bdd3fc019db2b7db44debf" } # branch: yt/carfield
+  fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "0769976fa51bdd820656a01161a4c46b88c59ac5" } # branch: yt/carfield
   axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.0-beta.4  }
   axi_slice:              { git: "https://github.com/pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
   timer_unit:             { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.2 }
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
-  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git",             rev: "9b77611" } # `michaero/safety-island-clic` branch
+  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: 9b77611a1d0c681f4819798d95422b0b895528a2 } # `michaero/safety-island-clic` branch
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: f7b51416f3c407e4c31e9c016616d57aae2687bd } # branch: yt/bump-clkgating
   hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
