--- a/Bender.yml
+++ b/Bender.yml
@@ -28,7 +28,7 @@ dependencies:
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
   riscv:                  { git: "git@github.com:AlSaqr-platform/riscv_nn.git", rev: 4ceb402db8619718a9170058bb31f75fcdf7ed1c } # branch: yt/hmr
-  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git",             rev: "9b77611" } # `michaero/safety-island-clic` branch
+  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git",             rev: 9b77611a1d0c681f4819798d95422b0b895528a2 } # `michaero/safety-island-clic` branch
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: f7b51416f3c407e4c31e9c016616d57aae2687bd } # branch: yt/bump-clkgating
   hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
@@ -36,6 +36,7 @@ dependencies:
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", rev: 19163bb5191d2669a8cbc267cdd4ce8e60f20746  } # branch: master
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git",  version: 1.29.0 }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 6e10650b50c7b40f7f81602acf61526330c4d69d} # branch: yt/hmr
+  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: c7478dafc96ccfef9dbb5f2b246371d42e9cae19 } # branch: power-management
 
 export_include_dirs:
   - include
