--- a/Bender.yml
+++ b/Bender.yml
@@ -20,7 +20,7 @@ dependencies:
   mchan:                  { git: "https://github.com/pulp-platform/mchan.git", rev: 7f064f205a3e0203e959b14773c4afecf56681ab } # branch: yt/fix-parametrization
   idma:                   { git: "https://github.com/pulp-platform/iDMA.git", rev: 437ffa9dac5dea0daccfd3e8ae604d4f6ae2cdf1 } # branch: master
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: "a7e3f4e4c7fe607bcd6b9d94db77f612fd6ef6be" } # branch: yt/carfield
-  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", version: 2.1.0 }
+  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: a596f17fc77713909bceb7eecf3ea2c3cdfe707c } # branch: yt/bump-hci
   fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "0769976fa51bdd820656a01161a4c46b88c59ac5" } # branch: yt/carfield
   axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.0-beta.9  }
   axi_slice:              { git: "https://github.com/pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
@@ -28,15 +28,14 @@ dependencies:
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
   riscv:                  { git: "git@github.com:AlSaqr-platform/riscv_nn.git", rev: 4ceb402db8619718a9170058bb31f75fcdf7ed1c } # branch: yt/hmr
-  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git",             rev: 9b77611a1d0c681f4819798d95422b0b895528a2 } # `michaero/safety-island-clic` branch
+  cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: 9b77611 } # `michaero/safety-island-clic` branch
   ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: f7b51416f3c407e4c31e9c016616d57aae2687bd } # branch: yt/bump-clkgating
-  hwpe-datamover-example: { git: "https://github.com/pulp-platform/hwpe-datamover-example.git", version: 1.0.1 }
-  hci:                    { git: "https://github.com/pulp-platform/hci.git", version: 1.0.8 }
+  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: b2e6f391aa6c10c03f45b693d80a0aaddecf169b } # branch: master
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", rev: 19163bb5191d2669a8cbc267cdd4ce8e60f20746  } # branch: master
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git",  version: 1.29.0 }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 6e10650b50c7b40f7f81602acf61526330c4d69d} # branch: yt/hmr
-  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: c7478dafc96ccfef9dbb5f2b246371d42e9cae19 } # branch: power-management
+  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 3797413e5f190c2a86185ab6d8b12af365051b1e } # branch: carfield
 
 export_include_dirs:
   - include
