--- a/Bender.yml
+++ b/Bender.yml
@@ -21,20 +21,20 @@ dependencies:
   idma:                   { git: "https://github.com/pulp-platform/iDMA.git", rev: 437ffa9dac5dea0daccfd3e8ae604d4f6ae2cdf1 } # branch: master
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: "a7e3f4e4c7fe607bcd6b9d94db77f612fd6ef6be" } # branch: yt/carfield
   cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: a596f17fc77713909bceb7eecf3ea2c3cdfe707c } # branch: yt/bump-hci
-  fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "0769976fa51bdd820656a01161a4c46b88c59ac5" } # branch: yt/carfield
-  axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.0-beta.9  }
+  fpu_interco:            { git: "https://github.com/pulp-platform/fpu_interco.git", rev: "4aec4b68424947b0c4cf25fd7c4b907cb9ec3dfa" } # branch: yt/carfield
+  axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.1-beta  }
   axi_slice:              { git: "https://github.com/pulp-platform/axi_slice.git", version: 1.1.4 } # deprecated, replaced by axi_cut (in axi repo)
   timer_unit:             { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.2 }
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
   tech_cells_generic:     { git: "https://github.com/pulp-platform/tech_cells_generic.git", version: 0.2.3 }
-  riscv:                  { git: "git@github.com:AlSaqr-platform/riscv_nn.git", rev: 4eac53237c6d0062715d17016fe95462eb81ebc3 } # branch: yt/hmr
+  riscv:                  { git: "git@github.com:AlSaqr-platform/riscv_nn.git", rev: dd086242d10f248b4051a1fc67ae2b35b989c29c } # branch: yt/hmr
   cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: 9b77611 } # `michaero/safety-island-clic` branch
-  ibex:                   { git: "https://github.com/lowRISC/ibex.git", rev: "pulpissimo-v6.1.1" }
+  ibex:                   { git: "https://github.com/pulp-platform/ibex.git", rev: "pulpissimo-v6.1.2" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: f7b51416f3c407e4c31e9c016616d57aae2687bd } # branch: yt/bump-clkgating
   hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: b2e6f391aa6c10c03f45b693d80a0aaddecf169b } # branch: master
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", rev: 19163bb5191d2669a8cbc267cdd4ce8e60f20746  } # branch: master
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git",  version: 1.29.0 }
-  redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 6e10650b50c7b40f7f81602acf61526330c4d69d} # branch: yt/hmr
+  redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 482d2f5ed05f25c851f4048f1bd402cc0d2b58b6 } # branch: yt/rapidrecovery
   redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 3797413e5f190c2a86185ab6d8b12af365051b1e } # branch: carfield
 
 export_include_dirs:
