--- a/Bender.yml
+++ b/Bender.yml
@@ -35,7 +35,7 @@ dependencies:
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", rev: 19163bb5191d2669a8cbc267cdd4ce8e60f20746  } # branch: master
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git",  version: 1.29.0 }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: 32023555679cfdb8a0a073ad4c17fc3a5d1ddea5 } # branch: yt/rapidrecovery
-  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 0fe14edd77e9a35d3d220bd78bd6b41a0e5935ea } # branch: carfield
+  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 532f9514ad5c7ee21dde9e3a84ae99d2a5760610 } # branch: astral
 
 export_include_dirs:
   - include
