Align versions for HCIv2
Update submodules

Adapt Makefile to work both in IIS and non-IIS settings

More scary Bender black magic.

But to me it looks like the Bender.lock is still wrong.

Scariest Benderonomicon of them all

Makefile fix for IIS

Use correct nonfree-commit for CI

Fix nonfree commit

Update regression-tests

--- a/Bender.yml
+++ b/Bender.yml
@@ -20,7 +20,7 @@ dependencies:
   mchan:                  { git: "https://github.com/pulp-platform/mchan.git", rev: 7f064f205a3e0203e959b14773c4afecf56681ab } # branch: yt/fix-parametrization
   idma:                   { git: "https://github.com/pulp-platform/iDMA.git", rev: 437ffa9dac5dea0daccfd3e8ae604d4f6ae2cdf1 } # branch: master
   hier-icache:            { git: "https://github.com/pulp-platform/hier-icache.git", rev: "2886cb2a46cea3e2bd2d979b505d88fadfbe150c" } # branch: astral
-  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: 8a9f62dafb5ec23c6cd361847ff0047e12befca4 } # branch: astral
+  cluster_peripherals:    { git: "https://github.com/pulp-platform/cluster_peripherals.git", rev: 0b8e8ab } # branch: fc/hci-v2
   axi:                    { git: "https://github.com/pulp-platform/axi.git", version: =0.39.1-beta  }
   timer_unit:             { git: "https://github.com/pulp-platform/timer_unit.git", version: 1.0.2 }
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git", version: 1.21.0 }
@@ -29,12 +29,12 @@ dependencies:
   cv32e40p:               { git: "https://github.com/pulp-platform/cv32e40p.git", rev: e863f576699815b38cc9d80dbdede8ed5efd5991 } # `michaero/safety-island-clic` branch
   ibex:                   { git: "https://github.com/pulp-platform/ibex.git", rev: "pulpissimo-v6.1.2" }
   scm:                    { git: "https://github.com/pulp-platform/scm.git", rev: 74426dee36f28ae1c02f7635cf844a0156145320 } # branch: yt/bump-clkgating
-  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: e47627c20b33bcaf4842c1add81fb888b4f12a9d }
+  hci:                    { git: "https://github.com/pulp-platform/hci.git", rev: "v2.0.0-rc1" } # branch: breaking-names
   register_interface:     { git: "https://github.com/pulp-platform/register_interface.git", version: 0.4.4  } # branch: master
   common_cells:           { git: "https://github.com/pulp-platform/common_cells.git",  version: 1.29.0 }
   redundancy_cells:       { git: "https://github.com/pulp-platform/redundancy_cells.git", rev: c37bdb47339bf70e8323de8df14ea8bbeafb6583 } # branch: astral_rebase
-  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 68999ccc922b10a5043bb98f67aaf3d8d8d59f3f } # branch: astral
-  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: 3131e87c40118f75e11a1ff9bae60fe764336a19 } # branch: astral-4x4
+  redmule:                { git: "https://github.com/pulp-platform/redmule.git", rev: 7abb256 } # branch: fc/hci-v2
+  neureka:                { git: "https://github.com/pulp-platform/neureka.git", rev: 60c51c0 } # branch: hci-v2
 
 export_include_dirs:
   - include
